-spacing issue fix

--- a/src/assets/scss/profile-page/_profile-page.scss
+++ b/src/assets/scss/profile-page/_profile-page.scss
@@ -1,7 +1,7 @@
 .profile-page-section {
     display: flex;
     .profile-section{
-        margin-top: 6rem;
+        margin-top: 5rem;
     .profile-form-section {
         margin-bottom: 4rem;
         width:100%;
