--- a/src/assets/scss/wallet/_wallet.scss
+++ b/src/assets/scss/wallet/_wallet.scss
@@ -2,7 +2,7 @@
     display: flex;
 
     .wallet-section {
-        margin-top: 6rem;
+        margin-top: 5rem;
 
         // sortby section begin
         .sortby-section {
